--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>Unit Test, Test First and TDD</title>
+		<title>Unit Test After, Before and TDD</title>
 
 		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
 		<meta name="author" content="Antoine Vernois">
@@ -37,7 +37,7 @@
 			<div class="slides">
 				<section>
 					<section>
-						<h1>Unit test, Test First and TDD</h1>
+						<h1>Unit Testing After, Before and TDD</h1>
 					
 						<p>
 							<small><a href="http://blog.crafting-labs.fr">Antoine Vernois</a> / <a href="http://twitter.com/avernois">@avernois</a></small>
