update pub section for BBL @ekito

--- a/index-fr.html
+++ b/index-fr.html
@@ -70,15 +70,18 @@
 
 					<section>
 						<h2>Software Craftsmanship Toulouse</h2>
-						<h3>Bring Your Own Code</h3>
-						5 septembre<br>
-						Tau, place de la Daurade<br> 
-						<br>
-						<br>
 					
 						<h3>Table ronde : les frameworks</h3>
 						12 septembre<br>
 						Tau, place de la Daurade<br>
+						<br>
+						<br>
+						<h3>Code and Coffee</h3>
+						Toulouse : le jeudi matin<br>
+						Le Cyrano, rue St Antoine du T.<br> 
+						<br>
+						Blagnac : le mercredi matin<br>
+						Le Parc, place des marronniers<br> 
 						<br>
 						<br>
 
@@ -89,24 +92,21 @@
 						<h2>Disclaimer</h2>
 
 						<ul>
-							<li>il s'agit d'une introduction</li>
-							<li>je ne parlerai pas</li>
+							<li>Il s'agit d'une introduction.</li>
+							<li>Je ne parlerai</li>
 							<ul>
-								<li>de mock</li>
-								<li>des guerres de clan london vs. chicago</li>
-								<li>de test d'intégration</li>
+								<li>pas de mock.</li>
+								<li>de tests d'intégration.</li>
 							</ul>
-							<li>les exemples seront en java</li>
+							<li>Les exemples seront en java.</li>
 							<li class="fragment">oh. et oui, il se peut que j'exagère un peu... :)</li>
 						</ul>
-
 					</section>
 				</section>
 
 				<section>
 					<section>
 						<h2><span class="fragment">Ma </span>définition</h2>
-
 						<dl class="fragment">
 							<dt>Unit test</dt>
 							<dd><p>un test qui vérifie un comportement d'un morceau de code.</p></dd>
