--- a/index-fr.html
+++ b/index-fr.html
@@ -196,11 +196,9 @@
 					</section>
 				</section>
 
-
-
 				<section>
 					<section>
-						<h2>TDD : Test Driven Développement</h2>
+						<h2>TDD : Test Driven Developpement</h2>
 						<h3>Développement guidé par les tests</h3>
 					</section>
 					<section>
