add some info about me

--- a/index-en.html
+++ b/index-en.html
@@ -43,9 +43,12 @@
 							<small><a href="http://blog.crafting-labs.fr">Antoine Vernois</a> / <a href="http://twitter.com/avernois">@avernois</a></small>
 						</p>
 					</section>
-
 					<section>
-						<h2>Who am I ?</h2>
+						<h2>Antoine Vernois</h2>
+						<p>Agile Software Craftsman / Journeyman</p>
+						<p>blog : <a href="https://blog.crafting-labs.fr">https://blog.crafting-labs.fr</a></p>
+						<p>twitter : <a href="http://twitter.com/avernois">@avernois</a></p>
+						<p>#ISpeakForFood</p>
 					</section>
 
 					<section>
