--- a/index-fr.html
+++ b/index-fr.html
@@ -46,7 +46,7 @@
 
 					<section>
 						<h2>Antoine Vernois</h2>
-						<p>Agile Software Craftsman / Journeyman</p>
+						<p>Software Anarchist</p>
 						<p>blog : <a href="https://blog.crafting-labs.fr">https://blog.crafting-labs.fr</a></p>
 						<p>twitter : <a href="http://twitter.com/avernois">@avernois</a></p>
 						<p>#ISpeakForFood</p>
