--- a/index-fr.html
+++ b/index-fr.html
@@ -234,6 +234,14 @@
 				</section>
 				<section>
 					<h1>Thank You !</h1>
+					<br>
+					<br>
+					<br>
+					<br>
+					<br>
+					<p>
+							<small><a href="https://blog.crafting-labs.fr">Antoine Vernois</a> / <a href="http://twitter.com/avernois">@avernois</a></small>
+						</p>
 				</section>
 
 			</div>
