Common Sens Consultant

--- a/index-fr.html
+++ b/index-fr.html
@@ -47,6 +47,7 @@
 					<section>
 						<h2>Antoine Vernois</h2>
 						<p>Software Anarchist</p>
+						<p>Common Sens Consultant</p>
 						<p>blog : <a href="https://blog.crafting-labs.fr">https://blog.crafting-labs.fr</a></p>
 						<p>twitter : <a href="http://twitter.com/avernois">@avernois</a></p>
 						<p>#ISpeakForFood</p>
@@ -57,9 +58,9 @@
 
 						<ul>
 							<li>Il s'agit d'une introduction.</li>
-							<li>Je ne parlerai</li>
+							<li>Je ne parlerai pas</li>
 							<ul>
-								<li>pas de mock.</li>
+								<li>de mock,</li>
 								<li>de tests d'intégration.</li>
 							</ul>
 							<li>Les exemples seront en java.</li>
